--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
